Fix tab dragging outside of window with touch events.

Fix a regression in dragging a tab outside of the window. The hit test
that was added to check that we were inside the HT_CLIENT bounds worked
correctly for the profile, min/max buttons but not for items in the tab
strip. The WM_MOUSE compatiblity events need to be dispatched to make
this drag of the tab work.

The hit test was actually added because it solved a problem with the
profile avatar button and the window getting dismissed. The WM_TOUCH path
solves it in a slightly different way incrementing touch_down_contexts
and returns MA_NOACTIVATE if there are any touch down contexts active. Use
this same way with WM_POINTER for touch.

BUG=812508,816391

Change-Id: Iacc874ab164866567e8c0cde14c2a1803f2081e2
Reviewed-on: https://chromium-review.googlesource.com/938221
Commit-Queue: Dave Tapuska <dtapuska@chromium.org>
Reviewed-by: Scott Violet <sky@chromium.org>
Cr-Commit-Position: refs/heads/master@{#539696}
Former-commit-id: f6ab5e3931c5dea36ed7608ae24ac72420ca90bc