ui/views/widget/widget_interactive_uitest.cc
@@ -14,11 +14,13 @@
 #include "base/strings/stringprintf.h"
 #include "base/strings/utf_string_conversions.h"
 #include "base/threading/thread_task_runner_handle.h"
+#include "base/win/windows_version.h"
 #include "build/build_config.h"
 #include "mojo/edk/embedder/embedder.h"
 #include "ui/base/ime/input_method.h"
 #include "ui/base/ime/text_input_client.h"
 #include "ui/base/resource/resource_bundle.h"
+#include "ui/base/test/ui_controls.h"
 #include "ui/base/ui_base_paths.h"
 #include "ui/base/ui_base_switches.h"
 #include "ui/events/event_processor.h"
@@ -362,6 +364,74 @@ TEST_F(WidgetTestInteractive, DesktopNativeWidgetAuraActivationAndFocusTest) {
   widget2->CloseNow();
   widget1->CloseNow();
 }
+
+class TouchEventHandler : public ui::EventHandler {
+ public:
+  TouchEventHandler(Widget* widget) : widget_(widget) {
+    widget_->GetNativeWindow()->GetHost()->window()->AddPreTargetHandler(this);
+  }
+
+  ~TouchEventHandler() override {
+    widget_->GetNativeWindow()->GetHost()->window()->RemovePreTargetHandler(
+        this);
+  }
+
+  void WaitForEvents() {
+    base::MessageLoopForUI* loop = base::MessageLoopForUI::current();
+    base::MessageLoopForUI::ScopedNestableTaskAllower allow_nested(loop);
+    base::RunLoop run_loop;
+    quit_closure_ = run_loop.QuitClosure();
+    run_loop.Run();
+  }
+
+  static void __stdcall AsyncActivateMouse(HWND hwnd,
+                                           UINT msg,
+                                           ULONG_PTR data,
+                                           LRESULT result) {
+    EXPECT_EQ(MA_NOACTIVATE, result);
+    std::move(reinterpret_cast<TouchEventHandler*>(data)->quit_closure_).Run();
+  }
+
+  void ActivateViaMouse() {
+    SendMessageCallback(
+        widget_->GetNativeWindow()->GetHost()->GetAcceleratedWidget(),
+        WM_MOUSEACTIVATE, 0, 0, AsyncActivateMouse,
+        reinterpret_cast<ULONG_PTR>(this));
+  }
+
+ private:
+  // ui::EventHandler:
+  void OnTouchEvent(ui::TouchEvent* event) override {
+    if (event->type() == ui::ET_TOUCH_PRESSED)
+      ActivateViaMouse();
+  }
+
+  Widget* widget_;
+  base::OnceClosure quit_closure_;
+  DISALLOW_COPY_AND_ASSIGN(TouchEventHandler);
+};
+
+TEST_F(WidgetTestInteractive, TouchNoActivateWindow) {
+  // ui_controls::SendTouchEvents which uses InjectTouchInput API only works
+  // on Windows 8 and up.
+  if (base::win::GetVersion() <= base::win::VERSION_WIN7)
+    return;
+
+  View* focusable_view = new View;
+  focusable_view->SetFocusBehavior(View::FocusBehavior::ALWAYS);
+  Widget* widget = CreateWidget();
+  widget->GetContentsView()->AddChildView(focusable_view);
+  widget->Show();
+
+  {
+    TouchEventHandler touch_event_handler(widget);
+    ASSERT_TRUE(ui_controls::SendTouchEvents(ui_controls::PRESS, 1, 100, 100));
+    touch_event_handler.WaitForEvents();
+  }
+
+  widget->CloseNow();
+}
+
 #endif  // defined(OS_WIN)
 
 TEST_F(WidgetTestInteractive, CaptureAutoReset) {
